<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- App name and Header name -->
    <string name="app_name">Home Budget Tracker</string>
    <string name="txt_expense_header">Expense</string>
    <string name="txt_income_header">Income</string>
    <string name="txt_add_expense_header">Add Expense</string>
    <string name="txt_add_income_header">Add Income</string>
    <string name="txt_expense_detail_header">Expense Detail</string>
    <string name="txt_income_detail_header">Income Detail</string>
    <string name="txt_distribution_header">Distribution</string>
    <string name="txt_report_header">Progress reports</string>
    
    <!-- Main function -->
    <string name="txt_total_amount">This month:</string>
    
    <!-- Button name -->
    <string name="txt_OK">OK</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_save">Save</string>
	<string name="desc">Menu Display</string>
	
	<!-- Add Fucntion -->
    <string name="txt_category">Category</string>
    <string name="txt_amount">Amount (USD)</string>
    <string name="txt_date">Date</string>
	<string name="txt_desc">Description</string>
	
	<!-- EditText hint -->
	<string name="txt_amount_hint">0.00</string>
	<string name="txt_date_hint">YYYY:MM:DD</string>
	<string name="txt_desc_hint">Add description here</string>
	
	<!-- Chart -->
	<string name="txt_line_filter">Filter</string>
	<string name="txt_pie_filter">Filter</string>
	
	<!-- Others -->
	<string name="toast_amount_null">At least you have to add amount</string>
    
	<!-- Arrays -->
    <string-array name="drawler_items_array">
        <item>Manage Expenses</item>
        <item>Manage Income</item>
        <item>Distribution</item>
        <item>Reports</item>
    </string-array>
    
    <string-array name="exp_categories_array">
        <item>Food</item>
        <item>Transportation</item>
        <item>Housing</item>
        <item>Medical</item>
        <item>Entertainment</item>
        <item>Others</item>
    </string-array>
    
    <string-array name="in_categories_array">
        <item>Monthly Income</item>
        <item>Other Income</item>
    </string-array>
    
    <string-array name="spinner_line_filter">
        <item>By date</item>
        <item>By month</item>
    </string-array>
</resources>
